--- a/array/array.html
+++ b/array/array.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Array</title>
-    <script src="array.js"></script>
+    <script src="array.js" defer></script>
 
     
 </head>
 <body>
     
+
+<ul></ul>
+
+
 </body>
 </html>
