--- a/speed/speed.html
+++ b/speed/speed.html
@@ -3,20 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SpeedTypeGame</title>
+    <title>Speed Typing Game</title>
     <link rel="stylesheet" href="speed.css">
     <script src="speed.js" defer></script>
-
-
-
 </head>
 <body>
-    <input type="button" value="StartGame">
-    <!-- <div class="letter">A</div> -->
-
-
-
-
+    <input type="button" value="Start">
+    <!-- <div class="letter A">A</div> -->
 </body>
 </html>
