--- a/site/site.html
+++ b/site/site.html
@@ -9,6 +9,8 @@
 
 
 <link rel="stylesheet" href="site.css">
+<link rel="stylesheet" href="light.css">
+<link rel="stylesheet" href="dark.css" id="darkcss" disabled> 
 <script src="site.js" defer ></script>
 
 
@@ -19,10 +21,6 @@
 <body>
     
 
-
-
-
-
     <h1>DARK MODE</h1>
 <nav>
 
@@ -31,7 +29,7 @@
 <li>Home</li>
 <li>About</li>
 <li>Contact</li>
-<li>&#9788</li>
+<li  id="switch">&#9789</li>
 
 
 </ul>
